testsuite/bsc.typechecker/context-errors/ContextReductionMethod.bsv.bsc-out.expected
checking package dependencies
compiling ContextReductionMethod.bsv
Error: "ContextReductionMethod.bsv", line 12, column 15: (T0020)
  Type error at:
    p[0]

  Expected type:
    Bool

  Inferred type:
    Bit#(1)

